# footstep_planner

./: CMakeLists.txt  README.md  package.xml
KIN-CAD2D/: KIN.dwg
src/: QP_eigen_solver.cpp  footstep_planner_casadi.cpp  footstep_planner_double_layer.cpp  main.cpp
